# LabelImg_Reset

./: .gitignore  HISTORY.rst  Makefile  README.rst  labelImg.py  pyproject.toml  resources.qrc  setup.py  test_0.py
.github/workflows/: package.yml
build-tools/: build-for-pypi.sh
i18n/: strings.properties
libs/: canvas.py  colorDialog.py  combobox.py  create_ml_io.py  default_label_combobox.py  hashableQListWidgetItem.py  labelDialog.py  labelFile.py  shape.py  stringBundle.py  toolBar.py  utils.py  yolo_io.py  zoomWidget.py
libs/Io/: pascal_voc_io.py
libs/Widget/: lightWidget.py
tests/: test_io.py  test_settings.py  test_stringBundle.py  test_utils.py
