[tool.poetry]
name = "labelimg"
version = "2.0.1.5"
description = "Graphical image annotation tool with bounding box support"
authors = ["TzuTa Lin <tzu.ta.lin@gmail.com>", "Qiang Wang <wangqiang2015@gmail.com>", "Junzhe Ye <yjz0918230128@foxmail.com>"]
license = "MIT"
homepage = "https://github.com/heartexlabs/labelImg"
repository = "https://github.com/heartexlabs/labelImg"
keywords = ["image-annotation", "bounding-box", "computer-vision", "labeling"]

# 关键修复：明确指定当前目录下的所有核心文件和目录
packages = [
    { include = "labelImg.py" },  # 主程序文件（确保文件名大小写与实际一致）
    { include = "libs" },         # 包含libs目录及其所有内容
]

include = [
    { path = "data", format = "wheel" },
    { path = "i18n", format = "sdist" },   # 源码包包含
]


[tool.poetry.scripts]
# 修复入口点：直接指向labelImg.py中的main函数
labelimg = "labelImg:main"  # 确保labelImg.py中存在main()函数

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
PySide6 = ">=6.6.0"
lxml = ">=5.1.0"
pillow = ">=10.2.0"
typing-extensions = ">=4.10.0"

# 修复 deprecated 警告：使用新的分组语法
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
black = ">=24.1.0"
isort = ">=5.13.2"
mypy = ">=1.8.0"
pre-commit = ">=3.6.0"
ruff = ">=0.3.0"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py313"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
