[tool.poetry]
name = "labelImg"
version = "2.0.2"
description = "LabelImg is a graphical image annotation tool and label object bounding boxes in images"
authors = ["TzuTa Lin <tzu.ta.lin@gmail.com>", "Qiang Wang <wangqiang2015@gmail.com>", "Junzhe Ye <yjz0918230128@foxmail.com>"]
license = "MIT"
homepage = "https://github.com/heartexlabs/labelImg"
repository = "https://github.com/heartexlabs/labelImg"
keywords = ["labelImg", "labelTool", "development", "annotation", "deeplearning", "image-annotation", "bounding-box", "computer-vision", "labeling"]

# 修复：移除不存在的labelImg目录，仅保留实际存在的文件/目录
packages = [
    { include = "labelImg.py" },  # 主程序文件（确保根目录存在该文件）
    { include = "libs" },         # 依赖库目录（确保该目录存在且非空）
]

# 修复：统一资源文件打包格式，wheel和sdist都包含必要资源
include = [
    { path = "data/**/*", format = ["wheel", "sdist"] },  # 递归包含data下所有文件
    { path = "i18n/**/*", format = ["wheel", "sdist"] },  # 递归包含i18n下所有文件
    { path = "resources/icons/app.icns", format = ["wheel", "sdist"] },  # 图标文件
]

[tool.poetry.scripts]
# 修复：入口点路径需与实际代码结构匹配（labelImg.py中的main函数）
labelImg = "labelImg:main"  # 若labelImg.py中直接定义main函数，无需嵌套labelImg.labelImg

[tool.poetry.dependencies]
python = ">=3.9.0,<3.14"
PySide6 = ">=6.6.0"
lxml = ">=5.1.0"
pillow = ">=10.2.0"
typing-extensions = ">=4.10.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
black = ">=24.1.0"
isort = ">=5.13.2"
mypy = ">=1.8.0"
pre-commit = ">=3.6.0"
ruff = ">=0.3.0"
py2app = { version = "*", markers = "sys_platform == 'darwin'" }

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py313"

[build-system]
requires = ["poetry-core>=1.9.0"]  # 移除setuptools依赖，纯Poetry构建
build-backend = "poetry.core.masonry.api"